added buttons and functionality. no styling yet

--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <span id="tired">Tiredness: 0</span>
     <span id="boredom">Boredom: 0</span>
     <button id="check"> testLvl</button>
+    <button id="decFood" class="tama">Feed</button>
+    <button id="decPlay" class="tama">Play</button>
+    <button id="decTire" class="tama">Rest</button>
 </body>
 </html>
