testing start button and intervals

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
   <!-- Main JS -->
   <script src="scripts/app.js" defer></script>
 
-    <title>Document</title>
+    <title>Tamagotchi</title>
 </head>
 <body>
     <h1> Tamagotchi test bed</h1>
     <span id="play">Play: 0</span>
     <span id="tired">Tiredness: 0</span>
     <span id="boredom">Boredom: 0</span>
-    <button id="check"> testLvl</button>
+    <button id="begin">Begin</button>
     <button id="decFood" class="tama">Feed</button>
     <button id="decPlay" class="tama">Play</button>
     <button id="decTire" class="tama">Rest</button>
