--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1> Tamagotchi test bed</h1>
-    <span id="play">Play: 0</span>
+    <span id="feed">Hunger: 0</span>
     <span id="tired">Tiredness: 0</span>
     <span id="boredom">Boredom: 0</span>
     <button id="begin">Begin</button>
