--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <span id="feed">Hunger: 0</span>
     <span id="tired">Tiredness: 0</span>
     <span id="boredom">Boredom: 0</span>
+    <span id="age">Age: 1</span>
     <button id="begin">Begin</button>
     <button id="decFood" class="tama">Feed</button>
-    <button id="decPlay" class="tama">Play</button>
     <button id="decTire" class="tama">Rest</button>
+    <button id="decPlay" class="tama">Play</button>
 </body>
 </html>
