added morph function and css styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <span id="tired"><h2>Tiredness: 0</h2></span>
     <button class="nes-btn" id="decPlay">Play</button>
     <span id="boredom"><h2>Boredom: 0</h2></span>
-    <img src="Kirby.gif" height="300" width="300">
+    <div id="image">
+    <img id="kirby" src="Kirby.gif" height="300" width="300">
+    </div>
   </div>
 </body>
 </html>
