clearing out unnecassary comments and console.logs

--- a/index.html
+++ b/index.html
@@ -18,21 +18,27 @@
 </head>
 <body>
   <div class="container">
-    <button class="nes-btn" id="begin">Begin</button>
-    <span id="age">Age: 1</span>
-    <h1> Tamagotchi!</h1>
-    <h1 id="name">Kirby</h1>
-    
-    
-    <button class="nes-btn" id="decFood">Feed</button>
-    <span id="feed"><h2>Hunger: 0</h2></span>
-    <button class="nes-btn" id="decTire">Rest</button>
-    <span id="tired"><h2>Tiredness: 0</h2></span>
-    <button class="nes-btn" id="decPlay">Play</button>
-    <span id="boredom"><h2>Boredom: 0</h2></span>
-    <div id="image">
-    <img id="kirby" src="Kirby.gif" height="300" width="300">
+
+    <div id="start">
+      <button class="nes-btn" id="begin">Begin</button>
+      <span id="age">Age: 1</span>
+      <h1> Tamagotchi!</h1>
+      <h1 id="name">Kirby</h1>
     </div>
+
+    <div id="decButtons">
+      <button class="nes-btn" id="decFood">Feed</button>
+      <span id="feed"><h2>Hunger: 0</h2></span>
+      <button class="nes-btn" id="decTire">Rest</button>
+      <span id="tired"><h2>Tiredness: 0</h2></span>
+      <button class="nes-btn" id="decPlay">Play</button>
+      <span id="boredom"><h2>Boredom: 0</h2></span>
+    </div>
+
+    <div id="image">
+      <img id="kirby" src="Kirby.gif" height="300" width="300">
+    </div>
+
   </div>
 </body>
 </html>
