fixed styling and layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="start">
       <button class="nes-btn" id="begin">Begin</button>
       <span id="age">Age: 1</span>
-      <h1> Tamagotchi!</h1>
+      <h1> Tamagotchi Kirby!</h1>
       <h1 id="name">Kirby</h1>
     </div>
 
